@@ -1,3 +1,9 @@
+Pending changes in the mainline
+===============================
+
+* Added Windows builder for Python 3.12
+
+
 Version 4.2 (2024-05-16)
 ========================
 
